--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -1,4 +1,4 @@
-name: Build, Test and Publish CMD Start Page
+name: Build CMD Start Page
 
 on: [push]
 
@@ -25,7 +25,5 @@ jobs:
     - uses: borales/actions-yarn@v2.0.0
       with:
         cmd: build # will run `yarn build` command
-    - uses: borales/actions-yarn@v2.0.0
-      with:
-        cmd: test # will run `yarn test` command
+
 
