--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -12,17 +12,18 @@ jobs:
         node-version: [8.x, 10.x, 12.x]
 
     steps:
-    - uses: actions/checkout@v1
+    - name: Checkout source
+      uses: actions/checkout@v1
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - name: GitHub Action for Yarn
-      uses: Borales/actions-yarn@v2.0.0
-    - uses: borales/actions-yarn@v2.0.0
+    - name: Run Yarn Install
+      uses: borales/actions-yarn@v2.0.0
       with:
         cmd: install # will run `yarn install` command
-    - uses: borales/actions-yarn@v2.0.0
+    - name: Run Yarn Build
+      uses: borales/actions-yarn@v2.0.0
       with:
         cmd: build # will run `yarn build` command
 
